--- a/perfumes.html
+++ b/perfumes.html
@@ -18,77 +18,46 @@
 body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:150px}
 
 /* HEADER */
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background: var(--color-primary);
-  color: #fff;
-  z-index: 1000;
-  transition: all 0.3s ease;
+header{
+  position:fixed; top:0; left:0; width:100%;
+  background:var(--color-primary); color:var(--color-background);
+  z-index:1000; transition:all .3s ease;
 }
-.logo-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 70px;
-  overflow: hidden;
-  transition: all 0.3s;
+.logo-container{
+  display:flex; align-items:center; justify-content:center; height:70px; overflow:hidden; transition:all .3s;
 }
-.logo-container img { height: 50px; margin-right: 10px; }
-.logo-container h1 { font-size: 1.8rem; color: #fff; margin: 0; }
-.header-hidden .logo-container { height: 0; transform: translateY(-100%); }
+.logo-container img{height:50px;margin-right:10px}
+.logo-container h1{font-size:1.8rem; color:#fff; margin:0}
 
 /* NAV */
-nav ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  padding: 10px 0;
-  flex-wrap: wrap;
-}
-nav a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 1rem;
-}
-nav a:hover { color: var(--color-accent); }
+nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0}
+nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem}
+nav a:hover{color:var(--color-accent)}
+nav a.active{color:var(--color-accent); border-bottom:2px solid var(--color-accent); padding-bottom:2px}
 
 /* MAIN PERFUMES */
-main { padding: 40px 20px; max-width: 1400px; margin: 0 auto; text-align: center; }
-h1 { margin-bottom: 40px; margin-top: 0; }
+main{padding:40px 20px;max-width:1400px;margin:0 auto;text-align:center}
+h1{margin-bottom:40px;margin-top:0}
 
 /* Grid responsivo 5/3/2 */
 .perfumes{
-  display:grid;
-  gap:20px;
-  justify-items:center;
-  grid-template-columns:repeat(5,1fr);
+  display:grid; gap:20px; justify-items:center; grid-template-columns:repeat(5,1fr);
 }
 @media(max-width:1024px){.perfumes{grid-template-columns:repeat(3,1fr)}}
 @media(max-width:768px){.perfumes{grid-template-columns:repeat(2,1fr)}}
 
 .perfume{
-  background:#fff;
-  border:1px solid var(--color-accent);
-  border-radius:10px;
-  padding:15px;
-  text-align:center;
-  transition:transform .3s,box-shadow .3s;
-  width:100%;
-  max-width:220px;
+  background:#fff; border:1px solid var(--color-accent); border-radius:10px; padding:15px; text-align:center;
+  transition:transform .3s,box-shadow .3s; width:100%; max-width:220px;
 }
-.perfume:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
-.perfume img{width:100%;height:auto;border-radius:8px}
-.perfume h3{margin:10px 0 5px;font-size:1.1rem}
-.perfume p{margin:5px 0;font-size:0.9rem;color:#666}
-.perfume .price{font-weight:bold;margin-top:10px;font-size:1rem;color:#000}
+.perfume:hover{transform:translateY(-5px); box-shadow:0 4px 20px rgba(0,0,0,.1)}
+.perfume img{width:100%; height:auto; border-radius:8px}
+.perfume h3{margin:10px 0 5px; font-size:1.1rem}
+.perfume p{margin:5px 0; font-size:0.9rem; color:#666}
+.perfume .price{font-weight:bold; margin-top:10px; font-size:1rem; color:#000}
 
 /* FOOTER */
-footer{background:var(--color-primary);color:#fff;text-align:center;padding:15px 10px;margin-top:40px;width:100%}
+footer{background:var(--color-primary); color:var(--color-background); text-align:center; padding:15px 10px; margin-top:40px; width:100%}
 </style>
 </head>
 <body>
@@ -110,54 +79,14 @@ footer{background:var(--color-primary);color:#fff;text-align:center;padding:15px
 <main>
   <h1>Nuestros Perfumes</h1>
   <div class="perfumes">
-    <div class="perfume">
-      <img src="images/PERFUME1.png" alt="Perfume 120ML">
-      <h3>Perfume 120ML</h3>
-      <p>Aroma fresco y duradero.</p>
-      <p class="price">$299.00</p>
-    </div>
-    <div class="perfume">
-      <img src="images/PERFUME1.png" alt="Perfume 120ML - Edición">
-      <h3>Perfume 120ML - Edición</h3>
-      <p>Aroma elegante y sofisticado.</p>
-      <p class="price">$350.00</p>
-    </div>
-    <div class="perfume">
-      <img src="images/PERFUME1.png" alt="Perfume 60ML">
-      <h3>Perfume 60ML</h3>
-      <p>Fragancia amaderada única.</p>
-      <p class="price">$199.00</p>
-    </div>
-    <div class="perfume">
-      <img src="images/PERFUME1.png" alt="Perfume 50ML">
-      <h3>Perfume 50ML</h3>
-      <p>Notas florales suaves.</p>
-      <p class="price">$180.00</p>
-    </div>
-    <div class="perfume">
-      <img src="images/PERFUME1.png" alt="Perfume 30ML">
-      <h3>Perfume 30ML</h3>
-      <p>Compacto y fresco para el día.</p>
-      <p class="price">$150.00</p>
-    </div>
-    <div class="perfume">
-      <img src="images/PERFUME1.png" alt="Perfume 250ML">
-      <h3>Perfume 250ML</h3>
-      <p>Fragancia intensa y duradera.</p>
-      <p class="price">$450.00</p>
-    </div>
-    <div class="perfume">
-      <img src="images/PERFUME1.png" alt="Set Miniaturas">
-      <h3>Set Miniaturas</h3>
-      <p>3 miniaturas para probar.</p>
-      <p class="price">$120.00</p>
-    </div>
-    <div class="perfume">
-      <img src="images/PERFUME1.png" alt="Edición Limitada">
-      <h3>Edición Limitada</h3>
-      <p>Notas exclusivas y sofisticadas.</p>
-      <p class="price">$599.00</p>
-    </div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Perfume 120ML"><h3>Perfume 120ML</h3><p>Aroma fresco y duradero.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Perfume 120ML - Edición"><h3>Perfume 120ML - Edición</h3><p>Aroma elegante y sofisticado.</p><p class="price">$350.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Perfume 60ML"><h3>Perfume 60ML</h3><p>Fragancia amaderada única.</p><p class="price">$199.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Perfume 50ML"><h3>Perfume 50ML</h3><p>Notas florales suaves.</p><p class="price">$180.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Perfume 30ML"><h3>Perfume 30ML</h3><p>Compacto y fresco para el día.</p><p class="price">$150.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Perfume 250ML"><h3>Perfume 250ML</h3><p>Fragancia intensa y duradera.</p><p class="price">$450.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Set Miniaturas"><h3>Set Miniaturas</h3><p>3 miniaturas para probar.</p><p class="price">$120.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Edición Limitada"><h3>Edición Limitada</h3><p>Notas exclusivas y sofisticadas.</p><p class="price">$599.00</p></div>
   </div>
 </main>
 
@@ -174,6 +103,16 @@ window.addEventListener('scroll', ()=>{
   if(y > lastY && y > 50) header.classList.add('header-hidden'); 
   else header.classList.remove('header-hidden');
   lastY = y <= 0 ? 0 : y;
+});
+
+/* --- Pestaña activa --- */
+const navLinks = document.querySelectorAll('nav a');
+const currentPage = window.location.pathname.split("/").pop();
+navLinks.forEach(link => {
+  const linkPage = link.getAttribute('href').split("/").pop();
+  if(linkPage === currentPage || (linkPage === "index.html" && currentPage === "")) {
+    link.classList.add('active');
+  }
 });
 </script>
 </body>
