--- a/perfumes.html
+++ b/perfumes.html
@@ -74,6 +74,8 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
     <div class="perfume"><img src="images/PERFUME1.png" alt="Perfume 250ML"><h3>Perfume 250ML</h3><p>Fragancia intensa y duradera.</p><p class="price">$450.00</p></div>
     <div class="perfume"><img src="images/PERFUME1.png" alt="Set Miniaturas"><h3>Set Miniaturas</h3><p>3 miniaturas para probar.</p><p class="price">$120.00</p></div>
     <div class="perfume"><img src="images/PERFUME1.png" alt="Edición Limitada"><h3>Edición Limitada</h3><p>Notas exclusivas y sofisticadas.</p><p class="price">$599.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Set Miniaturas"><h3>Set Miniaturas</h3><p>3 miniaturas para probar.</p><p class="price">$120.00</p></div>
+    <div class="perfume"><img src="images/PERFUME1.png" alt="Edición Limitada"><h3>Edición Limitada</h3><p>Notas exclusivas y sofisticadas.</p><p class="price">$599.00</p></div>
   </div>
 </main>
 
