--- a/perfumes.html
+++ b/perfumes.html
@@ -66,16 +66,16 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 <main>
   <h1>Nuestros Perfumes</h1>
   <div class="perfumes">
-    <div class="perfume"><img src="images/ADGPROFUMO.png" alt="Perfume 120ML"><h3>Perfume 120ML</h3><p>Aroma fresco y duradero.</p><p class="price">$299.00</p></div>
-    <div class="perfume"><img src="images/INV.png" alt="Perfume 120ML - Edición"><h3>Perfume 120ML - Edición</h3><p>Aroma elegante y sofisticado.</p><p class="price">$350.00</p></div>
-    <div class="perfume"><img src="images/INVPLAT.png" alt="Perfume 60ML"><h3>Neblina Plateada</h3><p>Fragancia amaderada única.</p><p class="price">$199.00</p></div>
-    <div class="perfume"><img src="images/JEANGARD.png" alt="Perfume 50ML"><h3>Perfume 50ML</h3><p>Notas florales suaves.</p><p class="price">$180.00</p></div>
-    <div class="perfume"><img src="images/LUCKY.png" alt="Perfume 30ML"><h3>Perfume 30ML</h3><p>Compacto y fresco para el día.</p><p class="price">$150.00</p></div>
-    <div class="perfume"><img src="images/PROFONDO.png" alt="Perfume 250ML"><h3>Perfume 250ML</h3><p>Fragancia intensa y duradera.</p><p class="price">$450.00</p></div>
-    <div class="perfume"><img src="images/SANTAL.png" alt="Set Miniaturas"><h3>Set Miniaturas</h3><p>3 miniaturas para probar.</p><p class="price">$120.00</p></div>
-    <div class="perfume"><img src="images/VELIXIR.png" alt="Edición Limitada"><h3>Edición Limitada</h3><p>Notas exclusivas y sofisticadas.</p><p class="price">$599.00</p></div>
-    <div class="perfume"><img src="images/BLEU.png" alt="Set Miniaturas"><h3>Set Miniaturas</h3><p>3 miniaturas para probar.</p><p class="price">$120.00</p></div>
-    <div class="perfume"><img src="images/CREED.png" alt="Edición Limitada"><h3>Edición Limitada</h3><p>Notas exclusivas y sofisticadas.</p><p class="price">$599.00</p></div>
+    <div class="perfume"><img src="images/ADGPROFUMO.png" alt="Perfume 120ML"><h3>Mar Negro</h3><p>Oscuro, marino, misterioso.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/INV.png" alt="Perfume 120ML - Edición"><h3>Neblina</h3><p>Fresco, salado, acuático..</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/INVPLAT.png" alt="Perfume 60ML"><h3>Neblina Plateada</h3><p>Fresco, audaz, moderno.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/JEANGARD.png" alt="Perfume 50ML"><h3>Edén Tropical</h3><p>Exótico, tropical, vibrante.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/LUCKY.png" alt="Perfume 30ML"><h3>Fortuna Dorada</h3><p>Dulce, audaz, opulento.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/PROFONDO.png" alt="Perfume 250ML"><h3>Abismo Azul</h3><p>Acuático, fresco, profundo.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/SANTAL.png" alt="Set Miniaturas"><h3>Sombra de Sandalo</h3><p>Leñoso, ahumado, robusto.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/VELIXIR.png" alt="Edición Limitada"><h3>Neblina V Elixir</h3><p> Intenso, picante, potente.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/BLEU.png" alt="Set Miniaturas"><h3>Océano Ígneo</h3><p>Elegante, fresco, audaz.</p><p class="price">$299.00</p></div>
+    <div class="perfume"><img src="images/CREED.png" alt="Edición Limitada"><h3>Legado</h3><p>Fresco, leñoso, complejo.</p><p class="price">$299.00</p></div>
   </div>
 </main>
 
