--- a/index.html
+++ b/index.html
@@ -32,11 +32,42 @@ nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px
 nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
 nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accent);}
 
-/* CARRUSEL */
-.carousel{position:relative;overflow:hidden;margin-top:70px;max-height:900px}
-.carousel-inner{display:flex;transition:transform 1s ease}
-.carousel-item{min-width:100%;position:relative}
-.carousel-item img, .carousel-item video{width:100%;display:block;object-fit:cover;max-height:900px;height:500px}
+/* HERO - BANNERS */
+.hero-banners{
+  display:flex;
+  width:100%;
+  margin-top:70px;
+  overflow:hidden;
+}
+.banner{
+  flex:1 1 33.333%;
+  max-height:90vh;
+  overflow:hidden;
+}
+.banner img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  display:block;
+  transition:transform .5s ease;
+}
+.banner img:hover{
+  transform:scale(1.05);
+}
+
+/* --- En móvil y tablet se convierte en carrusel deslizable --- */
+@media(max-width:1024px){
+  .hero-banners{
+    display:flex;
+    overflow-x:auto;
+    scroll-snap-type:x mandatory;
+    -webkit-overflow-scrolling: touch;
+  }
+  .banner{
+    flex:0 0 100%;
+    scroll-snap-align:center;
+  }
+}
 
 /* SEARCH */
 .search-container{display:flex;justify-content:center;align-items:center;margin:2rem auto;max-width:650px;padding:0 1rem}
@@ -78,18 +109,11 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   </nav>
 </header>
 
-<!-- Carrusel -->
-<section class="carousel" id="inicio">
-  <div class="carousel-inner">
-    <div class="carousel-item">
-      <video id="videoSlide" autoplay muted playsinline>
-        <source src="images/VIDEO1.mp4" type="video/mp4">
-        Tu navegador no soporta el video.
-      </video>
-    </div>
-    <div class="carousel-item"><img src="images/TELA NEGRA.jpg" alt="Tela Negra"></div>
-    <div class="carousel-item"><img src="images/SLIDE3.jpg" alt="Slide 3"></div>
-  </div>
+<!-- Hero Banners -->
+<section class="hero-banners" id="inicio">
+  <div class="banner"><img src="images/MODELO4.PNG" alt="Modelo 1"></div>
+  <div class="banner"><img src="images/MODELO2.PNG" alt="Modelo 2"></div>
+  <div class="banner"><img src="images/MODELO5.PNG" alt="Modelo 3"></div>
 </section>
 
 <!-- Buscador -->
@@ -120,20 +144,6 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 </footer>
 
 <script>
-/* Carrusel */
-const carouselInner = document.querySelector('.carousel-inner');
-const carouselItems = document.querySelectorAll('.carousel-item');
-let slideIndex = 0;
-function showNextSlide(){
-  slideIndex = (slideIndex + 1) % carouselItems.length;
-  carouselInner.style.transform = `translateX(-${slideIndex*100}%)`;
-  document.querySelectorAll('.carousel-item video').forEach(v=>{
-    if(carouselItems[slideIndex].contains(v)) v.play();
-    else v.pause();
-  });
-}
-setInterval(showNextSlide, 5000);
-
 /* Productos */
 const ropaProducts = [
    {id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
@@ -184,7 +194,6 @@ navLinks.forEach(link=>{
 
 /* Inicial */
 renderRopa();
-document.querySelectorAll('.carousel-item video').forEach(v=>{ if(!carouselItems[0].contains(v)) v.pause(); });
 </script>
 </body>
 </html>
