--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
 
 <!-- Hero Banners -->
 <section class="hero-banners" id="inicio">
-  <div class="banner"><img src="images/MODELO4.PNG" alt="Modelo 1"></div>
-  <div class="banner"><img src="images/MODELO2.PNG" alt="Modelo 2"></div>
-  <div class="banner"><img src="images/MODELO5.PNG" alt="Modelo 3"></div>
+  <div class="banner"><img src="images/MODELO4.png" alt="Modelo 1"></div>
+  <div class="banner"><img src="images/MODELO2.png" alt="Modelo 2"></div>
+  <div class="banner"><img src="images/MODELO5.png" alt="Modelo 3"></div>
 </section>
 
 <!-- Buscador -->
