--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
   --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 *{box-sizing:border-box;margin:0;padding:0}
-body{font-family:var(--font-family);background:var(--color-background);color:var(--color-text);line-height:1.6;padding-top:150px}
+body{
+  font-family:var(--font-family);
+  background:var(--color-background);
+  color:var(--color-text);
+  line-height:1.6;
+  padding-top:120px; /* antes 150px → menos espacio */
+}
 
 /* HEADER */
 header{
@@ -36,7 +42,7 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
 .hero-banners{
   display:flex;
   width:100%;
-  margin-top:70px;
+  margin-top:20px; /* antes 70px → más cerca del header */
   overflow:hidden;
 }
 .banner{
@@ -51,9 +57,7 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
   display:block;
   transition:transform .5s ease;
 }
-.banner img:hover{
-  transform:scale(1.05);
-}
+.banner img:hover{ transform:scale(1.05); }
 
 /* --- En móvil y tablet se convierte en carrusel deslizable --- */
 @media(max-width:1024px){
