--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
   --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 *{box-sizing:border-box;margin:0;padding:0}
+html, body{
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* evita scroll horizontal */
+}
 body{
   font-family:var(--font-family);
   background:var(--color-background);
@@ -49,6 +55,7 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
   flex:1 1 33.333%;
   max-height:90vh;
   overflow:hidden;
+  min-width:0; /* evita scroll horizontal en flex */
 }
 .banner img{
   width:100%;
@@ -66,10 +73,12 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
     overflow-x:auto;
     scroll-snap-type:x mandatory;
     -webkit-overflow-scrolling: touch;
+    width:100vw; /* asegura que ocupe todo el ancho del dispositivo */
   }
   .banner{
     flex:0 0 100%;
     scroll-snap-align:center;
+    min-width:100%; /* fuerza ancho completo */
   }
 }
 
