--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body{
   background:var(--color-background);
   color:var(--color-text);
   line-height:1.6;
-  padding-top:120px; /* antes 150px → menos espacio */
+  padding-top:120px;
 }
 
 /* HEADER */
@@ -47,15 +47,15 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
 /* HERO - BANNERS */
 .hero-banners{
   display:flex;
-  width:100%;
-  margin-top:-60px; /* antes 70px → más cerca del header */
-  overflow:hidden;
+  width:100vw; /* ancho total del viewport */
+  margin-top:-60px;
+  overflow-x:hidden;
 }
 .banner{
-  flex:1 1 33.333%;
+  flex: 0 0 33.333%;
   max-height:90vh;
   overflow:hidden;
-  min-width:0; /* evita scroll horizontal en flex */
+  min-width:0;
 }
 .banner img{
   width:100%;
@@ -66,19 +66,17 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
 }
 .banner img:hover{ transform:scale(1.05); }
 
-/* --- En móvil y tablet se convierte en carrusel deslizable --- */
+/* Responsive: Móvil y tablet */
 @media(max-width:1024px){
   .hero-banners{
-    display:flex;
+    flex-wrap: nowrap;
     overflow-x:auto;
     scroll-snap-type:x mandatory;
     -webkit-overflow-scrolling: touch;
-    width:100vw; /* asegura que ocupe todo el ancho del dispositivo */
   }
   .banner{
-    flex:0 0 100%;
+    flex:0 0 100vw; /* ocupa todo el ancho del dispositivo */
     scroll-snap-align:center;
-    min-width:100%; /* fuerza ancho completo */
   }
 }
 
