--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ html, body{
   width: 100%;
   margin: 0;
   padding: 0;
-  overflow-x: hidden; /* evita scroll horizontal */
+  overflow-x: hidden;
 }
 body{
   font-family:var(--font-family);
@@ -47,15 +47,17 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
 /* HERO - BANNERS */
 .hero-banners{
   display:flex;
-  width:100vw; /* ancho total del viewport */
+  width:100vw;
   margin-top:-60px;
   overflow-x:hidden;
+  position:relative;
 }
 .banner{
   flex: 0 0 33.333%;
   max-height:90vh;
   overflow:hidden;
   min-width:0;
+  margin:0; /* elimina espacio entre banners */
 }
 .banner img{
   width:100%;
@@ -66,6 +68,20 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
 }
 .banner img:hover{ transform:scale(1.05); }
 
+/* Indicador de scroll para móviles */
+.scroll-indicator{
+  display:none;
+  position:absolute;
+  right:10px;
+  bottom:10px;
+  font-size:1.2rem;
+  background:rgba(0,0,0,0.5);
+  color:#fff;
+  padding:0.3rem 0.6rem;
+  border-radius:4px;
+  z-index:10;
+}
+
 /* Responsive: Móvil y tablet */
 @media(max-width:1024px){
   .hero-banners{
@@ -75,9 +91,18 @@ nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accen
     -webkit-overflow-scrolling: touch;
   }
   .banner{
-    flex:0 0 100vw; /* ocupa todo el ancho del dispositivo */
+    flex:0 0 100vw;
     scroll-snap-align:center;
   }
+  .scroll-indicator{
+    display:block;
+    animation: bounce 1s infinite alternate;
+  }
+}
+
+@keyframes bounce{
+  0%{transform: translateX(0);}
+  100%{transform: translateX(5px);}
 }
 
 /* SEARCH */
@@ -125,6 +150,7 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   <div class="banner"><img src="images/MODELO4.png" alt="Modelo 1"></div>
   <div class="banner"><img src="images/MODELO2.png" alt="Modelo 2"></div>
   <div class="banner"><img src="images/MODELO5.png" alt="Modelo 3"></div>
+  <span class="scroll-indicator">&#8594; Desliza</span>
 </section>
 
 <!-- Buscador -->
