--- a/index.html
+++ b/index.html
@@ -14,130 +14,71 @@
   --font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 *{box-sizing:border-box;margin:0;padding:0}
-html, body{
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
 body{
   font-family:var(--font-family);
   background:var(--color-background);
   color:var(--color-text);
   line-height:1.6;
   padding-top:120px;
+  overflow-x:hidden;
 }
 
 /* HEADER */
-header{
-  position:fixed;top:0;left:0;width:100%;
-  background:var(--color-primary);color:var(--color-background);z-index:1000;
-  transition:all .3s ease;
-}
-.logo-container{display:flex;align-items:center;justify-content:center;height:70px;overflow:hidden;transition:all .3s}
+header{position:fixed;top:0;left:0;width:100%;background:var(--color-primary);color:var(--color-background);z-index:1000;}
+.logo-container{display:flex;align-items:center;justify-content:center;height:70px;}
 .logo-container img{height:50px;margin-right:10px}
 .logo-container h1{font-size:1.8rem;color:#fff;margin:0;}
-.header-hidden .logo-container{height:0;transform:translateY(-100%)}
-
-/* NAV */
 nav ul{list-style:none;display:flex;justify-content:center;gap:20px;padding:10px 0;background:var(--color-primary);}
-nav a{color:var(--color-background);text-decoration:none;font-weight:500;font-size:1rem;padding:5px 0;}
-nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accent);}
+nav a{color:#fff;text-decoration:none;font-weight:500}
+nav a.active{color:var(--color-accent);border-bottom:2px solid var(--color-accent)}
 
-/* HERO - BANNERS */
-.hero-banners{
-  display:flex;
-  width:100vw;
-  margin-top:-60px;
-  overflow-x:hidden;
-  position:relative;
-}
-.banner{
-  flex: 0 0 33.333%;
-  max-height:90vh;
-  overflow:hidden;
-  min-width:0;
-  margin:0; /* elimina espacio entre banners */
-}
-.banner img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-  transition:transform .5s ease;
-}
-.banner img:hover{ transform:scale(1.05); }
+/* BANNERS */
+.hero-banners{display:flex;width:100vw;margin-top:-60px;overflow-x:hidden;position:relative}
+.banner{flex:0 0 33.333%;max-height:90vh;overflow:hidden}
+.banner img{width:100%;height:100%;object-fit:cover;display:block}
 
-/* Indicador de scroll para móviles */
-.scroll-indicator{
-  display:none;
-  position:absolute;
-  right:10px;
-  bottom:10px;
-  font-size:1.2rem;
-  background:rgba(0,0,0,0.5);
-  color:#fff;
-  padding:0.3rem 0.6rem;
-  border-radius:4px;
-  z-index:10;
-}
-
-/* Responsive: Móvil y tablet */
-@media(max-width:1024px){
-  .hero-banners{
-    flex-wrap: nowrap;
-    overflow-x:auto;
-    scroll-snap-type:x mandatory;
-    -webkit-overflow-scrolling: touch;
-  }
-  .banner{
-    flex:0 0 100vw;
-    scroll-snap-align:center;
-  }
-  .scroll-indicator{
-    display:block;
-    animation: bounce 1s infinite alternate;
-  }
-}
-
-@keyframes bounce{
-  0%{transform: translateX(0);}
-  100%{transform: translateX(5px);}
-}
-
-/* SEARCH */
-.search-container{display:flex;justify-content:center;align-items:center;margin:2rem auto;max-width:650px;padding:0 1rem}
-#clearBtn{font-size:24px;cursor:pointer;margin-right:10px;color:#555;display:none;user-select:none}
-.search-bar{display:flex;flex:1;border:1px solid var(--color-accent);border-radius:4px;overflow:hidden;align-items:center;background:#fff}
-.search-bar input{flex:1;padding:.75rem;border:0;outline:none;font-size:16}
-.search-bar svg{width:18px;height:18px;margin:0 10px;flex-shrink:0}
-
-/* ROPA - PRODUCTOS */
+/* PRODUCTS */
 section{padding:4rem 2rem;text-align:center}
-section h2{margin-bottom:2rem;font-size:2rem;color:var(--color-primary)}
 .products{display:grid;gap:20px;grid-template-columns:repeat(4,1fr)}
-@media (max-width:1024px){.products{grid-template-columns:repeat(2,1fr)}}
-@media (max-width:768px){.products{grid-template-columns:repeat(1,1fr)}}
+@media(max-width:1024px){.products{grid-template-columns:repeat(2,1fr)}}
+@media(max-width:768px){.products{grid-template-columns:repeat(1,1fr)}}
 
-.product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;transition:transform .3s,box-shadow .3s}
+.product{border:1px solid var(--color-accent);border-radius:8px;padding:1rem;cursor:pointer;transition:.3s}
 .product:hover{transform:translateY(-5px);box-shadow:0 4px 20px rgba(0,0,0,.1)}
 .product img{width:100%;aspect-ratio:1/1;object-fit:cover;border-radius:8px;margin-bottom:1rem}
 .product h3{margin-bottom:.5rem;color:var(--color-secondary)}
 .product .price{font-weight:bold;color:var(--color-primary)}
 
-/* FOOTER */
-footer{background:var(--color-primary);color:var(--color-background);text-align:center;padding:2rem 1rem;margin-top:2rem}
+/* MODAL */
+.modal{
+  display:none;position:fixed;top:0;left:0;width:100%;height:100%;
+  background:rgba(0,0,0,0.7);justify-content:center;align-items:center;z-index:2000;
+}
+.modal-content{
+  background:#fff;width:90%;max-width:800px;display:flex;flex-wrap:wrap;border-radius:10px;overflow:hidden;
+}
+.modal-left, .modal-right{flex:1;min-width:300px;padding:20px}
+.modal-left img{width:100%;height:auto;object-fit:cover;border-radius:8px}
+.modal-right h2{margin-bottom:10px}
+.modal-right p{margin-bottom:10px}
+.options{margin:15px 0}
+.options label{display:block;margin-bottom:5px;font-weight:bold}
+.options select{padding:5px;width:100%}
+.price{font-size:1.2rem;font-weight:bold;margin:15px 0}
+.add-cart{background:var(--color-primary);color:#fff;border:none;padding:10px 20px;cursor:pointer;border-radius:5px}
+.close-btn{
+  position:absolute;top:15px;right:20px;font-size:24px;font-weight:bold;cursor:pointer;color:#fff;
+}
 </style>
 </head>
 <body>
-<header id="mainHeader">
+<header>
   <div class="logo-container">
-    <img src="images/LOGOE.png" alt="Logo EREBUS">
-    <h1>EREBUS</h1>
+    <img src="images/LOGOE.png" alt="Logo"><h1>EREBUS</h1>
   </div>
   <nav>
     <ul>
-      <li><a href="index.html" id="homeLink">Inicio</a></li>
+      <li><a href="index.html" class="active">Inicio</a></li>
       <li><a href="#ropa">Ropa</a></li>
       <li><a href="perfumes.html">Perfumes</a></li>
       <li><a href="#contacto">Contacto</a></li>
@@ -145,92 +86,86 @@ footer{background:var(--color-primary);color:var(--color-background);text-align:
   </nav>
 </header>
 
-<!-- Hero Banners -->
-<section class="hero-banners" id="inicio">
-  <div class="banner"><img src="images/MODELO4.png" alt="Modelo 1"></div>
-  <div class="banner"><img src="images/MODELO2.png" alt="Modelo 2"></div>
-  <div class="banner"><img src="images/MODELO5.png" alt="Modelo 3"></div>
-  <span class="scroll-indicator">&#8594; Desliza</span>
+<section class="hero-banners">
+  <div class="banner"><img src="images/MODELO4.png"></div>
+  <div class="banner"><img src="images/MODELO2.png"></div>
+  <div class="banner"><img src="images/MODELO5.png"></div>
 </section>
-
-<!-- Buscador -->
-<div class="search-container">
-  <span id="clearBtn">&times;</span>
-  <div class="search-bar">
-    <svg class="lupa" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-      <circle cx="11" cy="11" r="7" stroke="black" stroke-width="2" fill="none"/>
-      <line x1="16" y1="16" x2="22" y2="22" stroke="black" stroke-width="2"/>
-    </svg>
-    <input type="text" id="searchInput" placeholder="Buscar productos (solo ropa en esta página)..." />
-  </div>
-</div>
 
 <section id="ropa">
   <h2>Nuestra Ropa</h2>
   <div class="products" id="ropaProducts"></div>
 </section>
 
-<section id="contacto">
-  <h2>Contacto</h2>
-  <p>Email: contacto@tutienda.com</p>
-  <p>Tel: +34 600 123 456</p>
-</section>
+<footer><p>© 2024 EREBUS. Todos los derechos reservados.</p></footer>
 
-<footer>
-  <p>&copy; 2024 Tu Tienda Elegante. Todos los derechos reservados.</p>
-</footer>
+<!-- MODAL -->
+<div class="modal" id="productModal">
+  <span class="close-btn" id="closeModal">&times;</span>
+  <div class="modal-content">
+    <div class="modal-left"><img id="modalImage" src="" alt=""></div>
+    <div class="modal-right">
+      <h2 id="modalTitle"></h2>
+      <p id="modalDesc"></p>
+      <div class="options">
+        <label for="modalOptions" id="optionsLabel"></label>
+        <select id="modalOptions"></select>
+      </div>
+      <div class="price" id="modalPrice"></div>
+      <button class="add-cart">Añadir al carrito 🛒</button>
+    </div>
+  </div>
+</div>
 
 <script>
-/* Productos */
-const ropaProducts = [
-   {id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
-   {id:2,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
-   {id:3,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
-   {id:4,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación de alta calidad.",price:"$220.00",image:"images/PLAYERANEGRA1.png",keywords:"playera negra oversize"},
+const ropaProducts=[
+  {id:1,name:"PLAYERA OVERSIZE NEGRA 220G",description:"Comodidad superior y sensación premium.",price:"$220.00",image:"images/PLAYERANEGRA1.png"},
+  {id:2,name:"PLAYERA OVERSIZE BLANCA 220G",description:"Suavidad y estilo urbano.",price:"$220.00",image:"images/PLAYERABLANCA.png"},
 ];
+
 function renderRopa(list){
-  const cont = document.getElementById('ropaProducts');
-  cont.innerHTML = '';
+  const cont=document.getElementById('ropaProducts');
+  cont.innerHTML='';
   (list||ropaProducts).forEach(p=>{
-    const div = document.createElement('div');
-    div.className = 'product';
-    div.innerHTML = `<img src="${p.image}" alt="${p.name}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price}</p>`;
+    const div=document.createElement('div');
+    div.className='product';
+    div.innerHTML=`<img src="${p.image}"><h3>${p.name}</h3><p>${p.description}</p><p class="price">${p.price}</p>`;
+    div.addEventListener('click',()=>openModal(p,"ropa"));
     cont.appendChild(div);
   });
 }
-
-/* Buscador */
-const searchInput = document.getElementById('searchInput');
-const clearBtn = document.getElementById('clearBtn');
-searchInput.addEventListener('input', ()=>{
-  const q = searchInput.value.trim().toLowerCase();
-  if(q){
-    clearBtn.style.display='inline-block';
-    const filtered = ropaProducts.filter(p => p.name.toLowerCase().includes(q) || (p.keywords && p.keywords.toLowerCase().includes(q)));
-    renderRopa(filtered);
-  }else{ clearBtn.style.display='none'; renderRopa(); }
-});
-clearBtn.addEventListener('click', ()=>{ searchInput.value=''; clearBtn.style.display='none'; renderRopa(); });
-
-/* Header hide on scroll */
-const header = document.getElementById('mainHeader');
-let lastY=0;
-window.addEventListener('scroll', ()=>{
-  const y = window.pageYOffset || document.documentElement.scrollTop;
-  if(y > lastY && y > 50) header.classList.add('header-hidden'); else header.classList.remove('header-hidden');
-  lastY = y<=0?0:y;
-});
-
-/* Active nav tab */
-const navLinks = document.querySelectorAll('nav a');
-const currentPage = window.location.pathname.split("/").pop();
-navLinks.forEach(link=>{
-  const linkPage = link.getAttribute('href').split("/").pop();
-  if(linkPage===currentPage || (linkPage==="index.html" && currentPage==="")) link.classList.add('active');
-});
-
-/* Inicial */
 renderRopa();
+
+/* MODAL */
+const modal=document.getElementById('productModal');
+const closeModal=document.getElementById('closeModal');
+function openModal(product,type){
+  document.getElementById('modalImage').src=product.image;
+  document.getElementById('modalTitle').textContent=product.name;
+  document.getElementById('modalDesc').textContent=product.description;
+  document.getElementById('modalPrice').textContent=product.price;
+  const options=document.getElementById('modalOptions');
+  const optionsLabel=document.getElementById('optionsLabel');
+  options.innerHTML='';
+  if(type==="ropa"){
+    optionsLabel.textContent="Tallas disponibles:";
+    ["Mediana","Grande","Extra Grande"].forEach(t=>{
+      let opt=document.createElement('option');
+      opt.value=t; opt.textContent=t;
+      options.appendChild(opt);
+    });
+  }else if(type==="perfume"){
+    optionsLabel.textContent="Presentaciones disponibles:";
+    ["120ml","60ml"].forEach(t=>{
+      let opt=document.createElement('option');
+      opt.value=t; opt.textContent=t;
+      options.appendChild(opt);
+    });
+  }
+  modal.style.display="flex";
+}
+closeModal.addEventListener('click',()=>modal.style.display="none");
+window.addEventListener('click',(e)=>{if(e.target===modal) modal.style.display="none";});
 </script>
 </body>
 </html>
